--- a/Lesson-5/assignment/package.json
+++ b/Lesson-5/assignment/package.json
@@ -49,8 +49,8 @@
     "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
+    "antd": "^2.13.3",
     "dotenv": "^2.0.0",
-    "npm": "^5.8.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   },
