--- a/Lesson-5/assignment/package.json
+++ b/Lesson-5/assignment/package.json
@@ -49,6 +49,7 @@
     "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
+    "antd": "^3.3.3",
     "dotenv": "^2.0.0",
     "npm": "^5.8.0",
     "react": "^15.4.2",
