--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ Lesson-4/assignment/payroll/node_modules/
 Lesson-4/assignment/payroll/build/
 Lesson-5/assignment/payroll/node_modules/
 Lesson-5/assignment/payroll/build/
+Lesson-6/assignment/payroll/node_modules/
+Lesson-6/assignment/payroll/build/
